tests/fixtures/invalid/pow_list_none_float.py
# Cannot call pow() with List[int], None, Float
x = pow([1, 2, 3], None, 1.0)
